css/style.css
@font-face {
  font-family: 'digital-7regular';
  src: url("/calculator/digital-7-webfont.woff2") format('woff2'),
       url("/calculator/digital-7-webfont.woff") format('woff'),
       url("/digital-7-webfont.woff2") format('woff2'),
       url("/digital-7-webfont.woff") format('woff');
  font-weight: normal;
  font-style: normal;
}


html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  max-width: 100vw;
  max-height: 100vh;
  overflow: hidden;

}

body {
  background-color: rgb(25, 68, 107);
}

.wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  min-height: 100vh;
  overflow: hidden;
}

.wrapper > * {
  -webkit-box-flex: 0;
      -ms-flex: 0 1 auto;
          flex: 0 1 auto;
}

header {
  height: 15vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

h1 {
  font-family: 'digital-7regular';
  color: antiquewhite;
  font-size: 3em;
  text-align: center;
}

main {
  height: 75vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.calculator-wrapper {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 16.7% 83.3% ;
  grid-template-areas: 
  "display"
  "buttons";
  width: 100%;
  height: 50vh;
  box-sizing: border-box;
  margin: 0 35% 0 35%;
  background-color: #7770704d;
  border: grey solid 3px;
}

@media only screen and (max-width: 660px){
  .calculator-wrapper {
    margin: 0 20% 0 20%;
  }

  button {
    font-size: 1.9em;
  }

  button:hover {
    transform: scale(1);
    background-color: unset;
  }
}

.display-container {
  grid-area: display;
  display: grid;
  grid-template-columns: 75% 25%;
  box-sizing: border-box;
  align-items: center;
  border-bottom: solid grey 3px;
}

.display {
  display: flex;
  color: white;
  text-align: right;
  justify-content: right;
  height: 1.5em;
  box-sizing: border-box;
  width: 98%;
  font-family: 'digital-7regular' , monospace;
}

.dis-span {
  align-self: center;
  text-align: right;
  justify-self: right;
  flex: 2;
}

.backspace-container {
  width: 50%;
  height: 50%;
  box-sizing: border-box;
  justify-self: center;
  display: flex;
  flex-wrap: nowrap;

}

.backspace {
  width: 100%;
  height: 100%;
  background-color:rgb(141, 139, 139, 0.45) ;
  color: white;
  font-size: 3em;
  background: url(/calculator/backspace.svg);
  background-size: 100% 100%;
  border: none;
}

.button-container {
  grid-area: buttons;
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  grid-template-areas: 
  "clear negative percent divide"
  "seven eight nine multiply"
  "four five six minus"
  "one two three plus"
  "zero zero decimal equals";
  gap: 1px 1px;
  background-color: grey;
  justify-content: center;
  align-items: center;
  margin: 0 1px 0 1px;
}

button {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-family: 'Bebas Neue', cursive;
  font-size: 2.5em;
  font-weight: 400;
  color: rgb(25, 68, 107, 0.85);
  background-color: skyblue;
}

.negative {
  font-size: 1.9em;
}

button:focus {
  outline: none;
  box-shadow: none;
}

.operator:hover {
  background-color: gold;
  transform: scale(1.01);
}

.operator:focus {
  background-color: gold;
}

.number:hover {
  background-color: tomato;
}

.zero:hover {
  background-color: tomato;
}

.top:hover {
  background-color: tomato;
}

.decimal:hover {
  background-color: tomato;
}

.equals:hover {
  background-color:rgb(100, 206, 100);
}

footer {
  height: 10vh;
  width: 100%;
  background-color: rgb(141, 139, 139, 0.45);
  display: grid;
  grid-template-columns: 80% 20%;
  grid-template-rows: 1fr 1fr;
  grid-template-areas: 
  "top-left right"
  "bottom-left right";
  align-items: center;
  color: antiquewhite;

}

p {
  grid-area: top-left;
  margin-left: 2.5%;
  align-self: flex-end;
  font-size: .9rem;
  
}

.odin-link {
  grid-area: bottom-left;
  margin-left: 2.5%;
  font-size: .9rem;
}

.github-link {
  grid-area: right;
  justify-self:right;
  margin-right: 5%;
}

